--- a/index.html
+++ b/index.html
@@ -75,8 +75,27 @@
         ctx.stroke()
         ctx.fillText('Abcdefghijklmnop (' + baseline + ')', 0, y)
       })
-    }, 300)
+    }, 300);
 
+    (function () {
+      const canvas = document.getElementById('regression')
+      const ctx = canvas.getContext('2d')
+      ctx.translate(128.5, 128.5)
+      ctx.scale(1, 1)
+      ctx.clearRect(-128, -128, 256, 256)
+      ctx.beginPath()
+      ctx.save()
+      ctx.transform(1, 0, 0, 0.9090909090909091, 0, 0)
+      ctx.arc(0, 0, 110, 0, 6.283185307179586, false)
+      const p = ctx.createRadialGradient(0.5, 0.5, 0, 0.2, 0.4, 0.5)
+      p.addColorStop(1, 'rgba(0, 0, 255, 1)')
+      p.addColorStop(0, 'rgba(200, 200, 200, 0)')
+      ctx.fillStyle = p
+      ctx.transform(220, 0, 0, 200, -110, -100)
+      ctx.transform(1, 0, 0, 1, 0, 0)
+      ctx.fill()
+      ctx.restore()
+    })()
   </script>
 </body>
 
